# GeoEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Application.cpp  Application.h  Engine.h  Window.cpp
src/Core/: ComponentRegistry.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SystemRegistry.h
src/Core/Components/: Camera.cpp  Camera.h  Entity.h  Renderable.h  Transform.cpp  Transform.h
src/Core/Systems/: EngineRenderSystems.h
src/Events/: Broadcast.cpp  Broadcast.h  BroadcastImpl.h  EventDefs.h
src/Rendering/: ArenaSlab.h  Mesh.cpp  Mesh.h  RenderCommand.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp
src/Util/: ArenaLinear.h  CSparseSet.h
unity/: unity_core.cpp
